MDEV-8496: gtid_ignore_duplicates treats gtid_seq_no as 32-bit

--gtid-ignore-duplicates was comparing sequence numbers as 32-bit, so
after 2**32 transactions things would start to fail.